update Joi Schemas
